--- a/src/main/resources/com/example/mahin_2207109__cvbuilder/Home.fxml
+++ b/src/main/resources/com/example/mahin_2207109__cvbuilder/Home.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
    <top>
@@ -14,14 +15,51 @@
                <font>
                   <Font name="Cascadia Code Regular" size="30.0" />
                </font>
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
             </Text>
          </children>
       </VBox>
    </top>
    <bottom>
-      <VBox prefHeight="115.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
+      <VBox alignment="CENTER" BorderPane.alignment="CENTER">
+         <children>
+            <Button alignment="CENTER" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #212121;" text="Create your CV" textAlignment="CENTER" textFill="WHITE">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Button>
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="50.0" top="50.0" />
+         </BorderPane.margin></VBox>
    </bottom>
    <center>
-      <VBox prefHeight="137.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
+      <VBox alignment="CENTER" prefHeight="137.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome" textAlignment="CENTER" wrappingWidth="599.7448120117188">
+               <font>
+                  <Font name="Cascadia Code Regular" size="50.0" />
+               </font>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Click below to make your CV" textAlignment="CENTER" wrappingWidth="593.6364440917969">
+               <font>
+                  <Font size="30.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="50.0" />
+               </VBox.margin>
+            </Text>
+         </children>
+         <opaqueInsets>
+            <Insets bottom="20.0" top="20.0" />
+         </opaqueInsets></VBox>
    </center>
 </BorderPane>
