--- a/src/main/resources/com/example/mahin_2207109__cvbuilder/cv_input.fxml
+++ b/src/main/resources/com/example/mahin_2207109__cvbuilder/cv_input.fxml
@@ -1,16 +1,96 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.mahin_2207109__cvbuilder.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <Pane style="-fx-background-color: #1565C0;" BorderPane.alignment="CENTER">
+         <children>
+            <Text fill="WHITE" layoutX="217.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CV BUILDER">
+               <font>
+                  <Font size="35.0" />
+               </font>
+            </Text>
+         </children>
+      </Pane>
+   </top>
+   <bottom>
+      <Button mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="30.0" top="30.0" />
+         </BorderPane.margin>
+      </Button>
+   </bottom>
+   <center>
+      <GridPane alignment="CENTER" focusTraversable="true" prefHeight="233.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="291.33331298828125" minWidth="10.0" prefWidth="212.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="517.9999923706055" minWidth="10.0" prefWidth="377.33333333333337" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints maxHeight="84.33334350585938" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="84.33334350585938" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="84.33334350585938" minHeight="10.0" prefHeight="35.66667938232422" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="122.33333206176758" minHeight="10.0" prefHeight="34.66664632161459" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="91.33332824707031" minHeight="10.0" prefHeight="40.66668701171875" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="41.00001525878906" minHeight="10.0" prefHeight="28.66663106282553" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="38.00001525878906" minHeight="10.0" prefHeight="34.66670227050781" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Full Name:" wrappingWidth="162.04491806030273">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Email:" wrappingWidth="164.71160507202148" GridPane.rowIndex="1">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number:" wrappingWidth="163.37829208374023" GridPane.rowIndex="2">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Address:" wrappingWidth="211.37829208374023" GridPane.rowIndex="3">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Educational Qualification:" wrappingWidth="212.04491806030273" GridPane.rowIndex="4">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Skills:" wrappingWidth="212.04491806030273" GridPane.rowIndex="5">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Work Experience:" wrappingWidth="212.04491806030273" GridPane.rowIndex="6">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Projects:" wrappingWidth="212.04491806030273" GridPane.rowIndex="7">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+         </children>
+         <BorderPane.margin>
+            <Insets left="10.0" />
+         </BorderPane.margin>
+      </GridPane>
+   </center>
+</BorderPane>
