--- a/src/main/resources/com/example/mahin_2207109__cvbuilder/cv_input.fxml
+++ b/src/main/resources/com/example/mahin_2207109__cvbuilder/cv_input.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -10,12 +12,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="617.0" prefWidth="867.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <Pane style="-fx-background-color: #1565C0;" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" layoutX="217.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CV BUILDER">
+            <Text fill="WHITE" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CV BUILDER" textAlignment="CENTER" wrappingWidth="867.0">
                <font>
                   <Font size="35.0" />
                </font>
@@ -24,73 +25,97 @@
       </Pane>
    </top>
    <bottom>
-      <Button mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER">
+       <Button alignment="CENTER" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #212121; -fx-border-color: #ffeeee;" text="Create your CV" textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER">
+
+           <font>
+               <Font size="22.0" />
+           </font>
          <BorderPane.margin>
-            <Insets bottom="30.0" top="30.0" />
+            <Insets bottom="20.0" top="20.0" />
          </BorderPane.margin>
-      </Button>
+       </Button>
    </bottom>
    <center>
-      <GridPane alignment="CENTER" focusTraversable="true" prefHeight="233.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <GridPane alignment="CENTER" focusTraversable="true" BorderPane.alignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="291.33331298828125" minWidth="10.0" prefWidth="212.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="517.9999923706055" minWidth="10.0" prefWidth="377.33333333333337" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="341.9999796549479" minWidth="10.0" prefWidth="256.6666259765625" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="517.9999923706055" minWidth="10.0" prefWidth="334.66670735677087" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints maxHeight="84.33334350585938" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="84.33334350585938" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="84.33334350585938" minHeight="10.0" prefHeight="35.66667938232422" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="122.33333206176758" minHeight="10.0" prefHeight="34.66664632161459" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="91.33332824707031" minHeight="10.0" prefHeight="40.66668701171875" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="41.00001525878906" minHeight="10.0" prefHeight="28.66663106282553" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="38.00001525878906" minHeight="10.0" prefHeight="34.66670227050781" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="84.33334350585938" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="84.33334350585938" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="122.33333206176758" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="91.33332824707031" vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Full Name:" wrappingWidth="162.04491806030273">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Full Name:" wrappingWidth="162.04491806030273" GridPane.rowIndex="1">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Consolas Bold" size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Email:" wrappingWidth="164.71160507202148" GridPane.rowIndex="1">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Email:" wrappingWidth="164.71160507202148" GridPane.rowIndex="2">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Consolas Bold" size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number:" wrappingWidth="163.37829208374023" GridPane.rowIndex="2">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number:" wrappingWidth="163.37829208374023" GridPane.rowIndex="3">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Consolas Bold" size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Address:" wrappingWidth="211.37829208374023" GridPane.rowIndex="3">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Address:" wrappingWidth="211.37829208374023" GridPane.rowIndex="4">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Consolas Bold" size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Educational Qualification:" wrappingWidth="212.04491806030273" GridPane.rowIndex="4">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Educational Qualification:" wrappingWidth="259.37824630737305" GridPane.rowIndex="5">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Consolas Bold" size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Skills:" wrappingWidth="212.04491806030273" GridPane.rowIndex="5">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Skills:" wrappingWidth="212.04491806030273" GridPane.rowIndex="6">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Consolas Bold" size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Work Experience:" wrappingWidth="212.04491806030273" GridPane.rowIndex="6">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Work Experience:" wrappingWidth="212.04491806030273" GridPane.rowIndex="7">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Consolas Bold" size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Projects:" wrappingWidth="212.04491806030273" GridPane.rowIndex="7">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Projects:" wrappingWidth="212.04491806030273" GridPane.rowIndex="8">
+               <font>
+                  <Font name="Consolas Bold" size="18.0" />
+               </font>
+            </Text>
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your information" textAlignment="CENTER" wrappingWidth="836.0449333190918" GridPane.columnSpan="2">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
          </children>
          <BorderPane.margin>
-            <Insets left="10.0" />
+            <Insets bottom="10.0" left="10.0" top="10.0" />
          </BorderPane.margin>
+         <effect>
+            <Bloom threshold="1.0" />
+         </effect>
+         <padding>
+            <Insets right="20.0" />
+         </padding>
       </GridPane>
    </center>
 </BorderPane>
