--- a/src/main/resources/com/example/mahin_2207109__cvbuilder/Home.fxml
+++ b/src/main/resources/com/example/mahin_2207109__cvbuilder/Home.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mahin_2207109__cvbuilder.HomeController">
    <top>
       <VBox alignment="TOP_CENTER" style="-fx-background-color: #1565C0;" BorderPane.alignment="CENTER">
          <children>
@@ -25,7 +25,7 @@
    <bottom>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #212121;" text="Create your CV" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="home_cv_btn" alignment="CENTER" mnemonicParsing="false" onAction="#next_input_scene" style="-fx-background-radius: 20; -fx-background-color: #212121;" text="Create your CV" textAlignment="CENTER" textFill="WHITE">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
