--- a/src/main/resources/com/example/mahin_2207109__cvbuilder/cv_input.fxml
+++ b/src/main/resources/com/example/mahin_2207109__cvbuilder/cv_input.fxml
@@ -25,7 +25,7 @@
       </Pane>
    </top>
    <bottom>
-       <Button alignment="CENTER" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #212121; -fx-border-color: #ffeeee;" text="Create your CV" textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER">
+       <Button fx:id="sub_btn" alignment="CENTER" mnemonicParsing="false" onAction="#submit" style="-fx-background-radius: 20; -fx-background-color: #212121; -fx-border-color: #ffeeee;" text="Create your CV" textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER">
 
            <font>
                <Font size="22.0" />
@@ -93,14 +93,14 @@
                   <Font name="Consolas Bold" size="18.0" />
                </font>
             </Text>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <TextField fx:id="f_name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="email" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="p_num" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="address" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="edu_qual" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="skills" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="w_exp" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <TextField fx:id="projects" GridPane.columnIndex="1" GridPane.rowIndex="8" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your information" textAlignment="CENTER" wrappingWidth="836.0449333190918" GridPane.columnSpan="2">
                <font>
                   <Font size="18.0" />
