--- a/src/main/resources/com/example/mahin_2207109__cvbuilder/CV_show.fxml
+++ b/src/main/resources/com/example/mahin_2207109__cvbuilder/CV_show.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -25,12 +26,19 @@
             </ImageView>
             <VBox layoutX="43.0" layoutY="207.0">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-                  <Label styleClass="name-title" stylesheets="@../../../CV_show.css" text="Email : " />
-                  <Label styleClass="name-title" stylesheets="@../../../CV_show.css" text="Phone : " />
-                  <Label styleClass="name-title" stylesheets="@../../../CV_show.css" text="Address ; " />
+                  <Text fx:id="name" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="name-title" />
+                  <HBox>
+                     <children>
+                        <Label prefHeight="60.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="Email     :  " />
+                        <Label fx:id="email" prefHeight="60.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="mail" />
+                     </children>
+                  </HBox>
+                  <Label prefHeight="43.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="Phone    :  " />
+                  <Label prefHeight="43.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="Address : " />
                </children>
             </VBox>
+            <Label fx:id="phn" layoutX="152.0" layoutY="297.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="phn" />
+            <Label fx:id="addrs" layoutX="153.0" layoutY="341.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="add" />
          </children>
       </AnchorPane>
    </left>
@@ -44,21 +52,41 @@
                         <Font name="Segoe UI Bold" size="12.0" />
                      </font>
                   </Label>
+                  <Text fx:id="ed_q" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paragraph" text="Text">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
                   <Label styleClass="header" stylesheets="@../../../CV_show.css" text="Skills: ">
                      <font>
                         <Font name="Segoe UI Bold" size="12.0" />
                      </font>
                   </Label>
+                  <Text fx:id="skill" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paragraph" text="Text">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
                   <Label styleClass="header" stylesheets="@../../../CV_show.css" text="Work Experience:">
                      <font>
                         <Font name="Segoe UI Bold" size="12.0" />
                      </font>
                   </Label>
+                  <Text fx:id="w_ex" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paragraph" text="Text">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
                   <Label styleClass="header" stylesheets="@../../../CV_show.css" text="Projects: ">
                      <font>
                         <Font name="Segoe UI Bold" size="12.0" />
                      </font>
                   </Label>
+                  <Text fx:id="projects" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paragraph" text="Text">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
                </children>
             </VBox>
          </children>
