--- a/src/main/resources/com/example/mahin_2207109__cvbuilder/cv_input.fxml
+++ b/src/main/resources/com/example/mahin_2207109__cvbuilder/cv_input.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="617.0" prefWidth="867.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="617.0" prefWidth="867.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="com.example.mahin_2207109__cvbuilder.inputController">
    <top>
       <Pane style="-fx-background-color: #1565C0;" BorderPane.alignment="CENTER">
          <children>
