--- a/src/main/resources/com/example/mahin_2207109__cvbuilder/CV_show.fxml
+++ b/src/main/resources/com/example/mahin_2207109__cvbuilder/CV_show.fxml
@@ -2,7 +2,6 @@
 
 <?import java.lang.String?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -11,14 +10,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" styleClass="root" stylesheets="@../../../CV_show.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mahin_2207109__cvbuilder.show_controller">
+<BorderPane styleClass="root" stylesheets="@../../../CV_show.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mahin_2207109__cvbuilder.show_controller">
    <left>
       <AnchorPane styleClass="per_info_side" stylesheets="@../../../CV_show.css" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="44.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true" style="-fx-preserve-ratio: true;">
-               <image>
-                  <Image url="@../../../../../../../../Downloads/utsa.jpg" />
-               </image>
+            <ImageView fx:id="pro_pic" fitHeight="150.0" fitWidth="200.0" layoutX="44.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true" style="-fx-preserve-ratio: true;">
                <styleClass>
                   <String fx:value="profile-photo-wrapper" />
                   <String fx:value="profile-photo-wrapper" />
