--- a/src/main/resources/com/example/mahin_2207109__cvbuilder/cv_input.fxml
+++ b/src/main/resources/com/example/mahin_2207109__cvbuilder/cv_input.fxml
@@ -2,8 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Bloom?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -12,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="617.0" prefWidth="867.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="com.example.mahin_2207109__cvbuilder.inputController">
+<BorderPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mahin_2207109__cvbuilder.inputController">
    <top>
       <Pane style="-fx-background-color: #1565C0;" BorderPane.alignment="CENTER">
          <children>
@@ -22,6 +24,9 @@
                </font>
             </Text>
          </children>
+         <BorderPane.margin>
+            <Insets bottom="20.0" />
+         </BorderPane.margin>
       </Pane>
    </top>
    <bottom>
@@ -36,7 +41,7 @@
        </Button>
    </bottom>
    <center>
-      <GridPane alignment="CENTER" focusTraversable="true" BorderPane.alignment="CENTER">
+      <GridPane alignment="CENTER" focusTraversable="true" prefHeight="415.0" prefWidth="857.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="341.9999796549479" minWidth="10.0" prefWidth="256.6666259765625" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="517.9999923706055" minWidth="10.0" prefWidth="334.66670735677087" />
@@ -47,10 +52,12 @@
             <RowConstraints maxHeight="84.33334350585938" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="84.33334350585938" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="122.33333206176758" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="91.33332824707031" vgrow="SOMETIMES" />
-            <RowConstraints vgrow="SOMETIMES" />
-            <RowConstraints vgrow="SOMETIMES" />
-            <RowConstraints vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="91.33332824707031" minHeight="80.00001525878903" prefHeight="80.00001525878903" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="213.99997965494788" minHeight="56.0" prefHeight="122.66668701171875" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="344.6666666666667" minHeight="53.33331298828125" prefHeight="185.33333333333331" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="443.9999796549479" minHeight="60.333353678385436" prefHeight="75.66666666666669" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="443.9999796549479" minHeight="60.333353678385436" prefHeight="75.66666666666669" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="443.9999796549479" minHeight="60.333353678385436" prefHeight="75.66666666666669" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Full Name:" wrappingWidth="162.04491806030273" GridPane.rowIndex="1">
@@ -93,19 +100,58 @@
                   <Font name="Consolas Bold" size="18.0" />
                </font>
             </Text>
-            <TextField fx:id="f_name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="email" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="p_num" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="address" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField fx:id="edu_qual" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField fx:id="skills" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <TextField fx:id="w_exp" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <TextField fx:id="projects" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <TextField fx:id="f_name" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin></TextField>
+            <TextField fx:id="email" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin></TextField>
+            <TextField fx:id="p_num" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin></TextField>
+            <TextArea fx:id="address" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin>
+            </TextArea>
+            <TextArea fx:id="edu_qual" GridPane.columnIndex="1" GridPane.rowIndex="5">
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin>
+            </TextArea>
+            <TextArea fx:id="skills" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin>
+            </TextArea>
+            <TextArea fx:id="w_exp" GridPane.columnIndex="1" GridPane.rowIndex="7">
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin>
+            </TextArea>
+            <TextArea fx:id="projects" GridPane.columnIndex="1" GridPane.rowIndex="8">
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin>
+            </TextArea>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your information" textAlignment="CENTER" wrappingWidth="836.0449333190918" GridPane.columnSpan="2">
                <font>
                   <Font size="18.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="20.0" />
+               </GridPane.margin>
             </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Profile picture" wrappingWidth="212.04491806030273" GridPane.rowIndex="9">
+               <font>
+                  <Font name="Consolas Bold" size="18.0" />
+               </font>
+            </Text>
+            <Button fx:id="btnSelectImage" mnemonicParsing="false" onAction="#prof_pic_upload" text="Choose profile picture" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <ImageView fx:id="imgView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="10" />
          </children>
          <BorderPane.margin>
             <Insets bottom="10.0" left="10.0" top="10.0" />
