--- a/src/main/resources/com/example/mahin_2207109__cvbuilder/Home.fxml
+++ b/src/main/resources/com/example/mahin_2207109__cvbuilder/Home.fxml
@@ -27,13 +27,17 @@
          <children>
             <Button fx:id="home_cv_btn" alignment="CENTER" mnemonicParsing="false" onAction="#next_input_scene" style="-fx-background-radius: 20; -fx-background-color: #212121;" text="Create your CV" textAlignment="CENTER" textFill="WHITE">
                <VBox.margin>
-                  <Insets />
+                  <Insets bottom="15.0" />
                </VBox.margin>
                <font>
                   <Font size="22.0" />
                </font>
             </Button>
-            <Button fx:id="home_view_btn" alignment="CENTER" mnemonicParsing="false" onAction="#view_cv" style="-fx-background-radius: 20; -fx-background-color: #212121;" text="View all CV" textAlignment="CENTER" textFill="WHITE"> </Button>
+            <Button fx:id="home_view_btn" alignment="CENTER" mnemonicParsing="false" onAction="#view_cv" prefHeight="50.0" prefWidth="200.0" style="-fx-background-radius: 20; -fx-background-color: #212121; -fx-cursor: hand;" text="View all CV" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="22.0" />
+               </font>
+            </Button>
          </children>
          <BorderPane.margin>
             <Insets bottom="50.0" top="50.0" />
