--- a/src/main/resources/com/example/mahin_2207109__cvbuilder/CV_show.fxml
+++ b/src/main/resources/com/example/mahin_2207109__cvbuilder/CV_show.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.ImageView?>
@@ -96,6 +97,16 @@
                </children>
             </AnchorPane>
          </center>
+         <top>
+            <HBox alignment="CENTER_RIGHT" spacing="10.0">
+               <padding>
+                  <Insets top="10.0" right="10.0" bottom="10.0" left="10.0" />
+               </padding>
+               <children>
+                  <Button fx:id="homeBtn" text="Home" onAction="#handleHome" styleClass="home-button" />
+               </children>
+            </HBox>
+         </top>
       </BorderPane>
    </content>
 </ScrollPane>
